# SistemaTienda

./: Asistente de Compra.c  Asistente de Compra.h  CMakeLists.txt  Cliente.c  Cliente.h  Guardia.c  Guardia.h  README.md  Supervisor.c  Supervisor.h  Vendedor.c  Vendedor.h
Test/: CMakeLists.txt  TestTienda.c
Test/AsistenteCompras/: CMakeLists.txt  TestAsistente.c
Test/Cliente/: CMakeLists.txt
Test/Guardia/: CMakeLists.txt  TestGuardia.c
Test/Supervisor/: CMakeLists.txt  TestSupervisor.c
Test/Vendedor/: CMakeLists.txt  TestVendedor.c
Utils/: CMakeLists.txt  ImpresoraMensajes.h  Messages.c  Messages.h  SemLogic.c  SemLogic.h  SharedMemory.h  Utils.c  Utils.h
src/: CMakeLists.txt  main_cliente.c  main_tienda.c
src/OperacionTienda/: Asistente de Compra.c  Asistente de Compra.h  CMakeLists.txt  Cliente.c  Cliente.h  Guardia.c  Guardia.h  Supervisor.c  Supervisor.h  Vendedor.c  Vendedor.h
src/OperacionTienda/Utils/: ImpresoraMensajes.c  ImpresoraMensajes.h  Messages.h  SemLogic.h  SharedMemory.c  SharedMemory.h  Utils.c  Utils.h
