add_executable(TestGuardia TestGuardia.c)
target_include_directories(TestGuardia PRIVATE ../../src)
target_link_libraries(TestGuardia PRIVATE OperacionTienda)
target_link_libraries(TestGuardia PRIVATE Utils)
add_test(NAME ExtraerDatosUsuario COMMAND TestGuardia 1)
add_test(NAME DescomponerPeticion COMMAND TestGuardia 2)
add_test(NAME RecuperarUsuarios COMMAND TestGuardia 3)
add_test(NAME BuscarUsuario COMMAND TestGuardia 4)
add_test(NAME AgregarUsuario COMMAND TestGuardia 5)
add_test(NAME GuardarUsuarios COMMAND TestGuardia 6)
add_test(NAME ProcesarPeticion COMMAND TestGuardia 7)